# accu

./: .env.example  .gitignore  CLAUDE.md  README.md  README.ru.md  pyproject.toml
.claude/profiles/: builder.md  chronicler.md  conductor.md  critic.md  scout.md
docs/agents/: README.md  handoff-protocol.md
docs/candidates/: 001_yapsy.md  001_yapsy_technical_analysis.md  002_datasetGPT.md  003_slackify.md
docs/development/: CURRENT_SPRINT.md
docs/governance/: CONTRIBUTION_POINTS.md  GOVERNANCE_CHARTER.md
docs/modules/discovery/: SPEC.md
docs/modules/providers/: SPEC.md
docs/vision/: 0_original_dialog.md  1_manifesto.md  2_problem_statement.md  3_architecture.md  4_ai_agents.md  5_governance.md  6_equity_model.md  7_lifecycle.md  8_legal_ethics.md  9_mvp_roadmap.md  Creatman_create_Idea_Dialog.md
src/accu/: __init__.py  config.py  main.py
src/accu/agents/: __init__.py  base.py
src/accu/agents/critic/: __init__.py  agent.py  models.py
src/accu/agents/discovery/: __init__.py  agent.py  analyzer.py  models.py  scanner.py  scorer.py
src/accu/api/: __init__.py  discovery.py
src/accu/providers/: __init__.py  base.py  manager.py  openrouter.py
state/: active-tasks.md  decisions.md  priorities.md
